# nvdbapi-V3

./: .gitignore  LICENSE  README.md  README_qgis.md  apiforbindelse.py  nvdbapV3qgis3.py  nvdbapi-clientinfo-template.json  nvdbapiV3qgis3.py  nvdbapiv3.py  nvdbgeotricks.py  objektdifferanser.py  overlapp.md  overlapp.py  pyproject.toml  qgis3script-importernvdbdata.py  segmentering.md  segmentering.py  skrivnvdb.py  spesialrapporter.py  testGEOjson.geojson  testdata_segmentering.py  vegnettdetaljer.py
nvdbapiv3/: __init__.py  apiforbindelse.py  nvdbapiv3.py
