[tool.poetry]
name = "nvdbapiv3"
version = "0.1.0"
description = ""
authors = ["Jan Kristian Jensen <jensen72@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
six = "^1.15.0"
requests = "^2.25.1"
Shapely = "^1.7.1"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
