[tool.poetry]
name = "nvdbapi-v3"
version = "1.0.0"
description = "\"Read data from Norwegian government road database NVDB api https://nvdbapiles-v3.atlas.vegvesen.no/dokumentasjon\""
authors = ["LtGlahn <jensen72@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/LtGlahn/nvdbapi-V3"
repository = "https://github.com/LtGlahn/nvdbapi-V3"
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable"
]
packages = [
    { include = 'nvdbapiv3' }
]
[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28"
python-dateutil = "^2.8"
urllib3 = "^1.26.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
